# python-selvpcclient

./: .flake8  .gitignore  .semgrepignore  .travis.yml  README.md  README.rst  env.example.bat  env.example.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: checks.yml  secure.yml  verify.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/devref/: cli_option_guideline.rst  client_command_extensions.rst
docs/usage/: cli.rst  commands.rst  library.rst  man.rst
examples/first_project/: main.py
selvpcclient/: base.py  client.py  formatters.py  httpclient.py  shell.py  util.py
selvpcclient/commands/: __init__.py  capabilities.py  cross_region_subnets.py  customization.py  floatingips.py  keypair.py  license.py  limit.py  project.py  quotas.py  role.py  subnet.py  token.py  user.py  vrrp.py
selvpcclient/exceptions/: base.py  http.py
selvpcclient/resources/: capabilities.py  cross_region_subnets.py  customization.py  floatingips.py  keypairs.py  licenses.py  projects.py  quotas.py  roles.py  subnets.py  tokens.py  users.py  vrrp.py
tests/: test_util.py
tests/cli/: __init__.py  conftest.py  test_capabilities.py  test_cross_region_subnets.py  test_customization.py  test_floatingip.py  test_keypairs.py  test_license.py  test_limit.py  test_project.py  test_quota.py  test_role.py  test_subnet.py  test_token.py  test_user.py  test_vrrp.py
tests/rest/: __init__.py  conftest.py  test_capabilities.py  test_cross_region_subnets.py  test_customization.py  test_floatingips.py  test_keypairs.py  test_licenses.py  test_projects.py  test_quotas.py  test_roles.py  test_subnets.py  test_tokens.py  test_users.py  test_vrrp.py
tests/util/: answers.py  params.py  temp_files.py
