[metadata]
name = python-selvpcclient
author = Selectel
author-email = m.kalinin@selectel.ru
summary = Client for the Selectel Virtual Private Cloud API.
description-file = README.rst
home-page = https://github.com/selectel/python-selvpcclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    selvpc = selvpcclient.shell:main

[pbr]
skip_authors = True
skip_changelog = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[wheel]
universal = 1