[metadata]
name = python-selvpcclient
author = Selectel
author-email = m.kalinin@selectel.ru
summary = Client for the Selectel Virtual Private Cloud API.
long_description = file: README.md
long_description_content_type = text/markdown
home-page = https://github.com/selectel/python-selvpcclient
license = Apache License, Version 2.0
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[entry_points]
console_scripts =
    selvpc = selvpcclient.shell:main

[pbr]
skip_authors = True
skip_changelog = True

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[wheel]
universal = 1
